Update Index & Readme

--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
 
 <head>
+  <!--  General -->
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Weather Web Application." />
+  <meta name="keywords" content="weather, app, clima, tiempo" />
+  <meta name="author" content="Emanuel Escudero" />
+  <meta name="copyright" content="Emanuel Escudero" />
+  <meta name="robots" content="index" />
+
+  <!-- Favicon -->
   <link rel="icon" type="image/ico" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- OpenGraph -->
+  <meta property="og:title" content="WeatherApp" />
+  <meta property="og:image" content="https://i.ibb.co/BN2hYYh/Weather-App.png" />
+  <meta property="og:image:secure_url" content="https://i.ibb.co/BN2hYYh/Weather-App.png" />
+  <meta property="og:image:width" content="300" />
+  <meta property="og:image:height" content="300" />
+  <meta property="og:image:alt" content="Application's' Logotype" />
+  <meta property="og:author" content="Emanuel Escudero" />
+  <meta property="og:description" content="Weather Web Application." />
+
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
